--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <micrometer.version>1.5.2</micrometer.version>
         <postgres.driver.version>42.2.14</postgres.driver.version>
         <!--        TODO create-service: replace-->
-        <demo.service.api.version>0.3.0-SNAPSHOT</demo.service.api.version>
+        <catalog.service.api.version>1.5.0-SNAPSHOT</catalog.service.api.version>
         <service.commonlib.version>0.2.0-SNAPSHOT</service.commonlib.version>
 
         <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.wine.to.up</groupId>
             <artifactId>catalog-service-api</artifactId>
-            <version>0.1.1-SNAPSHOT</version>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -137,11 +137,6 @@
 
         <!--Our custom artifacts-->
         <!--        TODO create-service: replace-->
-        <dependency>
-            <groupId>com.wine.to.up</groupId>
-            <artifactId>demo-service-api</artifactId>
-            <version>${demo.service.api.version}</version>
-        </dependency>
     </dependencies>
 
     <!-- Нужен для пуша jar в репозиторий libs-snapshot-local в jfrog artifactory -->
